--- a/04 - Belajar Tools Front-End Web Intermediate/04 - dom lit/01 - lit-starter-project/xliff/id.xlf
+++ b/04 - Belajar Tools Front-End Web Intermediate/04 - dom lit/01 - lit-starter-project/xliff/id.xlf
@@ -1,18 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <xliff version="1.2" xmlns="urn:oasis:names:tc:xliff:document:1.2">
-<file target-language="id" source-language="en" original="lit-localize-inputs" datatype="plaintext">
-<body>
-<trans-unit id="s6dfd1a978586d8de">
-  <source>Welcome, <x id="0" equiv-text="${this.name}"/>!</source>
-</trans-unit>
-<trans-unit id="sacac6b633604cb76">
-  <source>I hope you are in good condition</source>
-</trans-unit>
-<trans-unit id="h23f91a1995670179">
-  <source> Please visit
-          <x id="0" equiv-text="&lt;a href=&quot;https://www.dicoding.com/&quot; target=&quot;_blank&quot;&gt;"/>this site<x id="1" equiv-text="&lt;/a&gt;"/> to be professional
-          programmer</source>
-</trans-unit>
-</body>
-</file>
+  <file target-language="id" source-language="en" original="lit-localize-inputs" datatype="plaintext">
+    <body>
+      <trans-unit id="s6dfd1a978586d8de">
+        <source>Welcome, <x id="0" equiv-text="${this.name}"/>!</source>
+        <target>Selamat datang, <x id="0" equiv-text="${this.name}"/>!
+        </target>
+      </trans-unit>
+      <trans-unit id="sacac6b633604cb76">
+        <source>I hope you are in good condition</source>
+        <target>Saya harap Anda dalam kondisi baik</target>
+      </trans-unit>
+      <trans-unit id="h23f91a1995670179">
+        <source>
+          Please visit
+          <x id="0" equiv-text="&lt;a href=&quot;https://www.dicoding.com/&quot; target=&quot;_blank&quot;&gt;"/>this site<x id="1" equiv-text="&lt;/a&gt;"/> 
+          to be professional
+          programmer
+        </source>
+        <target>
+          tolong kunjungi
+          <x id="0" equiv-text="&lt;a href=&quot;https://www.dicoding.com/&quot; target=&quot;_blank&quot;&gt;"/>situs ini<x id="1" equiv-text="&lt;/a&gt;"/> 
+          untuk menjadi progammer 
+          profesional
+        </target>
+      </trans-unit>
+    </body>
+  </file>
 </xliff>
